# seedkit-ai

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vercel.json
apps/docs/: package.json  vercel.json
apps/seedcanvas/: AUDIT.md  PLAN.md  PRD.md  STORAGE_ANALYSIS.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/seedcanvas/src-tauri/: Cargo.toml  tauri.conf.json
apps/seedcanvas/src-tauri/capabilities/: default.json
apps/seedcanvas/src-tauri/icons/: icon.icns
apps/seedcanvas/src-tauri/src/: db.rs  lib.rs  main.rs  mcp.rs  mcp_bridge.rs
apps/seedcanvas/src-tauri/src/ark/: mod.rs  types.rs
apps/seedcanvas/src-tauri/src/tasks/: image.rs  mod.rs  video.rs
apps/seedcode/: PLAN.md  package.json  tsup.config.ts
connect_test/: pnpm-lock.yaml  test-thinking.ts
docs/image_gen/: 创建图片生成任务 API.md
docs/text_gen/: index.md
docs/text_gen_responses/: index.md
docs/video_gen/: index.md
examples/: package.json  test-image-generation.ts  test-thinking.ts
src/: convert-to-volcengine-chat-message.test.ts  convert-to-volcengine-chat-message.ts  convert-volcengine-usage.test.ts  index.ts  version.ts  volcengine-chat-language-model.ts  volcengine-chat-options.ts  volcengine-chat-prompt.ts  volcengine-error.ts  volcengine-prepare-tools.test.ts  volcengine-prepare-tools.ts  volcengine-provider.ts  volcengine-tools.ts
src/chat/: convert-to-volcengine-chat-message.test.ts  convert-to-volcengine-chat-message.ts  convert-volcengine-chat-usage.test.ts  index.ts  (+9 more)
website/: mdx-components.tsx  package.json
(+195 files in other folders)
