[package]
name = "seedcanvas"
version = "0.0.1"
description = "AI-powered infinite canvas desktop app"
authors = []
edition = "2021"

[lib]
name = "seedcanvas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
