[package]
name = "seedcanvas"
version = "0.0.1"
description = "AI-powered infinite canvas desktop app"
authors = []
edition = "2021"
default-run = "seedcanvas"

[lib]
name = "seedcanvas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "seedcanvas-mcp"
path = "src/bin/seedcanvas-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = "1"
